--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <th>Jersey Number</th>
         </tr>
         <tr>
-            <td>Rohit Sharma</td>
+            <td>vinnu</td>
             <td>Captain</td>
             <td>45</td>
         </tr>
